contrast fix 2

--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Comic Relief', sans-serif;
 }
 h2 {
-  color: rgb(56, 55, 55)
+  color: rgb(56, 55, 55);
 }
 /** HEADER **/
 #header-nav {
